108 ==> 405825 - Feature request: "Video date" in XMP Metadata Editor.
109 ==> 405799 - Not possible to add collection.
110 ==> 389549 - "Clear all faces on this image" Does Not Remove All People Tags.
111 ==> 405904 - The saved version of the image is not linked to the original.
112 ==> 372308 - Buttons for rotate does not show very well.
113 ==> 375375 - Various bugs detecting and tagging faces in current 5.4.0 Digikam appimage.
114 ==> 405700 - Lensfun supported Camera is missing.
115 ==> 400140 - Digikam crash when exporting on google photos.
116 ==> 397744 - Face recognition not working.
117 ==> 398000 - Multi/batch rename fails almost every time.
118 ==> 396496 - QSQLITE -> MYSQL loses grouping information.
119 ==> 382311 - Photos in collapsed groups are incorrectly excluded if first photo in group does not match filter.
120 ==> 400981 - Appimage not working anymore: /lib64/libfontconfig.so.1: undefined symbol: FT_Done_MM_Var.
121 ==> 406054 - Export to google photo a picture with a "title" => no "title" in google photo.
122 ==> 254932 - New tool to export images as desktop wallpaper folder.
123 ==> 192020 - Tool to export as plasma backgrounds.
124 ==> 406171 - digiKam crashed on exit.
125 ==> 406276 - Error during Migration: "Error creating database schema".
126 ==> 406227 - Picture without any tag are not listed with button "No Tags".
127 ==> 401377 - Export to (Onedrive, Dropbox ...) crashes digikam (Segmentation Fault).
128 ==> 406309 - Tags reappear after being merged when several merge processes overlap(?).
129 ==> 387487 - Browsing through thumbnails quickly with right arrow key causes crash.
130 ==> 385726 - Add Support For Apple Live Photos.
131 ==> 360806 - digiKam doesn't show Gimp 2.9 xcf images [patch].
132 ==> 393408 - Support for extra image formats as HEIC, FITS, JPEG-XR [patch].
133 ==> 406356 - Crop to Selection not visible in Sidebar and Menubar.
134 ==> 406418 - Tag icon don't show after using and show a clock icon for used tag.
135 ==> 